fix(review): restore lost DAO annotations; filter organization children
Three review findings from PR #28778:

1. Runtime break (P1): the 680-commit merge reconciliation re-applied
   TagUsageDAO.getTagUsagesAfter and FieldRelationshipDAO.insertMany
   through a helper that truncated their leading annotations, leaving
   both methods without @ConnectionAwareSqlQuery/@ConnectionAwareSqlUpdate.
   JDBI cannot bind an implementation for either, so TagUsageCleanup and
   the batched mention inserts would have failed at runtime. Restored both
   annotation pairs (MySQL + Postgres) verbatim from the pre-merge commit.

2. Organization children ignored soft deletion: listTeamsUnderOrganization
   returns raw parentless-team ids without applying `deleted`, and three
   call sites consumed them differently — childrenCount used the unfiltered
   size, getChildren(teamId, include) ignored the requested Include, and
   only the subtree walk filtered. Consolidated all three onto
   getOrganizationChildren(orgId, include) / getLiveOrganizationChildIds(orgId)
   so the organization path matches the PARENT_OF path, which gets the same
   filtering from findTo.

3. Style: dropped redundant fully-qualified UsageDAO.UsageDetailsWithId and
   java.util.stream.Collectors references in EntityUtil (both already
   imported).

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>